// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Program button should render chrome correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Chrome"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Chrome"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render finder correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Finder"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Finder"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render github correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Github"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Github"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render settings correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Settings"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Settings"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render spotify correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Spotify"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Spotify"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render terminal correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="Terminal"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="Terminal"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;

exports[`Program button should render vscode correctly to match snapshot 1`] = `
<div>
  <button
    aria-label="VsCode"
    class="chakra-button css-u4k77m"
    type="button"
  >
    <img
      alt="VsCode"
      aria-hidden="true"
      class="chakra-image css-1570kgy"
      focusable="false"
      loading="lazy"
      src=""
    />
  </button>
</div>
`;
